# dialoguefactory

./: .gitignore  LICENSE.md  README.md  baseline.ipynb  pyproject.toml  start.ipynb  template_tutorial.ipynb
dialoguefactory/: __init__.py  dialogue_generator.py
dialoguefactory/environment/: actions.py  descriptions.py  entities.py  helpers.py
dialoguefactory/environments/: builders.py  easy.py  hard.py  path_helpers.py  world.py
dialoguefactory/generation/: dialogue.py  file_list_db.py  goal_generators.py  helpers.py  mappers_database.py  param_generators.py  templates.py
dialoguefactory/language/: components.py  desc_mappers.py  describers.py  helpers.py  phrases.py  queries.py  sentences.py  words.py
dialoguefactory/policies/: agent_policies.py  base_policies.py  env_policies.py  goals.py  policies_helpers.py  user_policies.py
dialoguefactory/state/: kn_checkers.py  kn_helpers.py  kn_parsers.py  kn_updaters.py  knowledge_base.py
dialoguefactory/trainers/: arch.py  baseline.py  evaluation.py  serializers.py  vocab.py
docs/: conf.py  dialoguefactory.environment.rst  dialoguefactory.environments.rst  dialoguefactory.generation.rst  dialoguefactory.language.rst  dialoguefactory.policies.rst  dialoguefactory.rst  dialoguefactory.state.rst  dialoguefactory.trainers.rst  index.rst  modules.rst
