[project]
name = "dialoguefactory"
version = "1.0.0"


authors = [
  { name="Stefan Martinovski", email="dialoguefactory@outlook.com" },

]
description = "A library for automatically generating dialogues grounded in a textual environment."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["Dijkstar",
                "file-read-backwards",
                "tqdm",
                "notebook",
                "ipywidgets",
                "spacy",
                "pyinflect"
               
]

[project.urls]
Homepage = "https://github.com/smartinovski/dialoguefactory"
Issues = "https://github.com/smartinovski/dialoguefactory/issues"
Contribute = "https://github.com/smartinovski/dialoguefactory#contribute"
"Support Us" = "https://github.com/smartinovski/dialoguefactory#support-us"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "/dialoguefactory",
]